# new-api

./: .gitignore  main.go
common/: constants.go  crypto.go  init.go
constant/: channel.go  endpoint_type.go
controller/: bg_admin.go  bg_admin_test.go  bg_apikey.go  bg_apikey_test.go  bg_byo.go  bg_callbacks.go  bg_capability_helper.go  bg_dev_capabilities.go  bg_dev_capabilities_test.go  bg_dev_project.go  bg_dev_project_test.go  bg_dev_responses.go  bg_dev_usage.go  bg_dev_usage_test.go  bg_e2e_test.go  bg_error.go  bg_health.go  bg_policy.go  bg_policy_test.go  bg_project.go  bg_project_resolve.go  bg_project_resolve_test.go  bg_project_test.go  bg_responses.go  bg_responses_test.go  bg_sessions.go  bg_sessions_test.go  bg_tools.go  bg_tools_test.go  bg_usage.go  model.go
docs/: BASEGATE.md  DEVELOPMENT.md  PHASE10_PLAN.md  PHASE12_PLAN.md  PHASE13_PLAN.md  PHASE14_PLAN.md  PHASE15_PLAN.md  ROADMAP.md
dto/: basegate.go  basegate_test.go  suno.go
logger/: logger.go
middleware/: auth.go  bg_rate_limit.go
model/: bg_admin_queries.go  bg_attempt.go  bg_audit.go  bg_billing.go  bg_byo_credential.go  bg_capability.go  bg_capability_policy.go  bg_capability_seed.go  bg_project.go  bg_response.go  bg_response_test.go  bg_routing_policy.go  (+10 more)
sdk/python/: README.md  pyproject.toml
sdk/python/basegate/: __init__.py  _client.py  _exceptions.py  _sse.py  _types.py
sdk/python/basegate/resources/: __init__.py  responses.py  sessions.py  tools.py
sdk/python/tests/: test_client.py  test_responses.py  test_sessions.py  test_sse.py  test_tools.py  test_types.py
(+101 files in other folders)
