[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basegate"
version = "0.1.0"
description = "Python SDK for BaseGate — Unified AI Capability Gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["basegate*"]
